--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
-
+#开发时关闭，以便实时查看页面变化
+spring.thymeleaf.cache=false
 #################redis基础配置#################
 spring.redis.database=0
 spring.redis.host=192.168.32.102
@@ -31,3 +32,7 @@ spring.data.mongodb.database=test
 #spring.data.mongodb.password=
 #spring.data.mongodb.username=
 spring.data.mongodb.repositories.enabled=true
+
+#upload file size
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=100MB
